# DamageScan

./: README.md  models.json  pyproject.toml
models/: rf_compressed_Capella09-02-2023_ModelTransfer5.joblib  rf_compressed_Capella13-02-2023_ModelTransfer4.joblib  rf_compressed_Capella15-02-2023_ModelTransfer5.joblib  rf_compressed_Capella16-08-2021_ModelTransfer12.joblib  rf_compressed_Capella17-02-2023_ModelTransfer1.joblib
